# tsubaki

./: .gitattributes  LICENSE  README.md
libsolidity/analysis/: SyntaxChecker.cpp
libsolidity/ast/: AST.h
libsolidity/parsing/: Parser.cpp
libtsubakic/: CMakeLists.txt  libtsubakic.cpp
lllc/: main.cpp
snap/: snapcraft.yaml
spec/: LRC20.helix  LRC20.tsu
