if (EMSCRIPTEN)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORTED_FUNCTIONS='[\"_solidity_license\",\"_solidity_version\",\"_solidity_compile\"]' -s RESERVED_FUNCTION_POINTERS=20")
	add_executable(soljson libtsubakic.cpp)
	target_link_libraries(soljson PRIVATE tsubaki)
else()
	add_library(libtsubakic libtsubakic.cpp)
	set_target_properties(libtsubakic PROPERTIES OUTPUT_NAME tsu)
	target_link_libraries(libtsubakic PRIVATE tsubaki)
endif()
